--- a/Sentiment_Analysis_Project.ipynb
+++ b/Sentiment_Analysis_Project.ipynb
@@ -28,6 +28,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Sjcdi79VAbU1",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Sentiment Analysis on Comments Regarding Jakarta's MRT Using the Naïve Bayes Algorithm"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "lh9_cJyBCAJD",
         "colab_type": "text"
       },
@@ -7325,7 +7335,7 @@
         "mnb.fit(tf_train.iloc[:, :-1], tf_train.iloc[:, -1])\n",
         "mnb.predict(tf_test.iloc[:, :-1])"
       ],
-      "execution_count": 93,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7365,7 +7375,7 @@
       "source": [
         "mnb.score(tf_test.iloc[:, :-1], tf_test.iloc[:, -1])"
       ],
-      "execution_count": 94,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7395,7 +7405,7 @@
       "source": [
         "mnb.prior"
       ],
-      "execution_count": 95,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7427,7 +7437,7 @@
       "source": [
         "mnb.likelihood"
       ],
-      "execution_count": 96,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7822,7 +7832,7 @@
       "source": [
         "mnb.posterior"
       ],
-      "execution_count": 97,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7951,7 +7961,7 @@
         "skf = StratifiedKFold(n_splits=5)\n",
         "skf.get_n_splits(tf, df['label'])"
       ],
-      "execution_count": 98,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7987,7 +7997,7 @@
         "  mnb.predict(tf.iloc[test_index])\n",
         "  print(\"Score: \", mnb.score(tf.iloc[test_index], df['label'].iloc[test_index]))"
       ],
-      "execution_count": 99,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
